applied close to close

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -235,8 +235,8 @@
                   <input class="form-control" id="propertyImage" type="file">
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary">Close</button>
-                  <button type="button" class="btn btn-primary">Save</button>
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
+                  <button type="button" class="btn btn-primary" type="submit">Save</button>
                 </div>
               </form>
             </div>
