added new card button, add client button, and logout

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -53,6 +53,15 @@
                   User
                 </a>
               </li>
+              <li>
+                <a href="#" class="nav-link text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi d-block mx-auto mb-1 bi-person-circle" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z"/>
+                      <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/>
+                    </svg>
+                  Logout
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -73,6 +82,7 @@
                         />
                     </form>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addPropertyModal">Add Property</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addClientModal">Add Client</button>
                 </div>
             </div>
       </div>
@@ -90,6 +100,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Interested</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
                             <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
@@ -106,6 +117,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Interested</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
                             <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
@@ -122,6 +134,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Interested</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
                             <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
@@ -138,6 +151,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Interested</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
                             <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
@@ -154,6 +168,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Interested</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
                             <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-danger">Unavailable</span></small>
@@ -170,6 +185,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Interested</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
                             <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-danger">Unavailable</span></small>
@@ -239,6 +255,27 @@
                   <button class="btn btn-primary" type="submit">Save</button>
                 </div>
               </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <!-- Delete Property Modal-->
+      <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
