--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -78,9 +78,33 @@
       </div>
     </header>
     <main>
+
+        <!--Property List-->
       <div class="album py-5 bg-body-tertiary">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                {% for property in properties %}
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img class="bd-placeholder-img card-img-top" src="{{ url_for('static', filename='images/Din House.jpg')}}" width="100%" height="225" alt="">
+                        <div class="card-body">
+                            <h2 class="card-title">{{ property.name }}</h2>
+                            <p class="card-text"><strong>Seller: </strong>Din Shane Magallanes</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                              <div class="btn-group">
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Edit</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                              </div>
+                            {% if property.is_available %}
+                                <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
+                            {% else %}
+                                <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-danger">Unavailable</span></small>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                </div>
+                {% endfor %}
                 <div class="col">
                     <div class="card shadow-sm">
                         <img class="bd-placeholder-img card-img-top" src="{{ url_for('static', filename='images/Din House.jpg')}}" width="100%" height="225" alt="">
@@ -190,7 +214,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <form method="POST">
+              <form enctype="multipart/form-data" method="POST">
                 <div class="mb-3">
                   <label for="propertyName" class="col-form-label">Property Name:</label>
                   <input type="text" class="form-control" id="propertyName" name="propertyName">
@@ -232,7 +256,7 @@
                 </div>
                 <div class="mb-3">
                   <label for="propertyImage" class="col-form-label">Insert property image:</label>
-                  <input class="form-control" id="propertyImage" type="file">
+                  <input class="form-control" id="propertyImage" type="file" name="file">
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Close</button>
