--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -81,22 +81,28 @@
       <div class="album py-5 bg-body-tertiary">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                {% for property in properties %}
                 <div class="col">
                     <div class="card shadow-sm">
                         <img class="bd-placeholder-img card-img-top" src="{{ url_for('static', filename='images/Din House.jpg')}}" width="100%" height="225" alt="">
                         <div class="card-body">
-                            <h2 class="card-title">Din Estates</h2>
+                            <h2 class="card-title">{{ property.name }}</h2>
                             <p class="card-text"><strong>Seller: </strong>Din Shane Magallanes</p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editPropertyModal">Edit</button>
                                   <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                               </div>
-                            <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
+                            {% if property.is_available %}
+                                <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
+                            {% else %}
+                                <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-danger">Unavailable</span></small>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
                 </div>
+                {% endfor %}
                 <div class="col">
                     <div class="card shadow-sm">
                         <img class="bd-placeholder-img card-img-top" src="{{ url_for('static', filename='images/house.jpg')}}" width="100%" height="225" alt="">
