--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -110,7 +110,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                   <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal{{ property.id }}">Edit</button>
-                                  <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                  <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#deletePropertyModal">Delete</button>
                               </div>
                             {% if property.is_available %}
                                 <small class="text-body-secondary">Status: <span class="badge rounded-pill text-bg-success">Available</span></small>
@@ -204,6 +204,30 @@
                 </div>
             </div>
           </div>
+      </div>
+
+      <!-- Delete Property Modal-->
+      <div class="modal fade" tabindex="-1" role="dialog" id="deletePropertyModal">
+        <div class="modal-dialog" role="document" tabindex="-1">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Delete confirmation</h5>
+            </div>
+            <div class="modal-body">
+              <p class="alert alert-danger">
+                Are you sure you want to delete this property?
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                Cancel
+              </button>
+              <button type="button" class="btn btn-danger">
+                Delete
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Add Property Modal -->
