added client page. not yet linked to index html

--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -117,7 +117,7 @@
       class="form-signin w-100 m-auto border bg-white"
       style="border-radius: 15px"
     >
-      <form class="needs-validation" novalidate method="POST">
+      <form class="needs-validation" method="POST">
         <img
           class="mb-4"
           src="{{ url_for('static', filename='images/Wizard_Realty_Logo.png')}}"
